# collate

./: .gitignore  CLAUDE.md  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: ARCHITECTURE.md  SPEC.md
docs/superpowers/plans/: 2026-04-18-keyboard-navigation.md
docs/superpowers/specs/: 2026-04-18-keyboard-navigation-design.md
src/: App.css  App.test.tsx  App.tsx  main.tsx  store.test.ts  store.ts  test-setup.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: rendering.rs
src-tauri/src/: lib.rs  main.rs  menu.rs  render.rs  text.rs
src-tauri/tests/: text_layer.rs
src/components/: BugReportDialog.test.tsx  BugReportDialog.tsx  EmptyState.test.tsx  EmptyState.tsx  FindBar.test.tsx  FindBar.tsx  InfoPanel.test.tsx  InfoPanel.tsx  PageImage.tsx  PageSidebar.test.tsx  PageSidebar.tsx  PageViewer.test.tsx  PageViewer.tsx  PanelSection.tsx  ShortcutOverlay.test.tsx  ShortcutOverlay.tsx  SidebarResizeHandle.test.tsx  SidebarResizeHandle.tsx  SidebarThumbnail.test.tsx  SidebarThumbnail.tsx  StatusBar.test.tsx  StatusBar.tsx  TabBar.test.tsx  TabBar.tsx  TextOverlay.test.tsx  TextOverlay.tsx  Toolbar.test.tsx  Toolbar.tsx
src/components/ui/: form.tsx  sonner.tsx
src/hooks/: useDebounce.test.ts  useFindBar.test.ts  useFindBar.ts  useKeyboardNav.test.ts  useKeyboardNav.ts  useTextLayer.test.ts  useTextLayer.ts  useTheme.test.ts  useTheme.ts
